tests/errors/string-omitted.sbl
externals (stem)
define stem as (
  <-
  hop 2
)
